--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "birdgardensofnaples",
-  "homepage": "https://patrick1bauer.github.io/birdgardensofnaples",
+  "homepage": "",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -H 0.0.0.0 -p 3000"
   },
   "keywords": [],
   "dependencies": {
